@@ -1,3 +1,6 @@
+[0, 14, 10]: 2017-04-26
+  - fix problem with emitting using cyaml
+
 [0, 14, 9]: 2017-04-22
   - remove dependency on ``typing`` while still supporting ``mypy``
     (http://stackoverflow.com/a/43516781/1307905)
